--- a/template-1/src/index.html
+++ b/template-1/src/index.html
@@ -5,5 +5,6 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
 <body>
+<h1>ts-app</h1>
 </body>
 </html>
